# alloy-in-action

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust-ci.yml  solidity-ci.yml
01-deploy-interact-decode/: Cargo.toml  README.md
01-deploy-interact-decode/src/: main.rs
01-initial-setup/: Cargo.toml  README.md
01-initial-setup/src/: main.rs
02-advanced-transaction-composition/: Cargo.toml  README.md
02-advanced-transaction-composition/src/: main.rs
02-advanced-transaction-composition/src/utils/: mod.rs
02-new-stuff-testing/: Cargo.toml
02-new-stuff-testing/src/: main.rs
03-real-time-event-subscriptions/: Cargo.toml  allderives.rs  test.rs
03-real-time-event-subscriptions/src/: main.rs
solidity-smart-contracts/: README.md
solidity-smart-contracts/src/: SampleContract.sol
solidity-smart-contracts/test/: SampleContract.t.sol
solidity/src/: SampleContract.sol
solidity/test/: SampleContract.t.sol
