[workspace]
members = [
    "01-deploy-interact-decode",
]
resolver = "2"

[workspace.dependencies]
alloy-contract = "0.5.4"
alloy-network = "0.5.4"
alloy-primitives = "0.8.9"
alloy-provider = "0.5.4"
alloy-signer-local = "0.5.4"
alloy-sol-macro = "0.8.9"
alloy-sol-types = "0.8.9"
alloy-transport = "0.5.4"
dotenv = "0.15.0"
eyre = "0.6.12"
tokio = "1.41.0"
tracing-subscriber = "0.3.18"
url = "2.5.2"
