[workspace]
members = [
    "01-deploy-interact-decode",
    "02-advanced-transaction-composition",
    "03-real-time-event-subscriptions"
]
resolver = "2"

[workspace.dependencies]
alloy-chains = "0.1.47"
alloy-contract = "0.7.2"
alloy-network = "0.7.2"
alloy-primitives = "0.8.11"
alloy-provider = "0.7.2"
alloy-rpc-types = "0.7.2"
alloy-signer-local = "0.7.2"
alloy-sol-macro = "0.8.11"
alloy-sol-types = "0.8.11"
alloy-transport = "0.7.2"
dotenv = "0.15.0"
eyre = "0.6.12"
futures = "0.3.31"
tokio = "1.41.0"
tracing-subscriber = "0.3.18"
url = "2.5.3"
