[package]
name = "initial_setup"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-contract = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, features = ["hyper", "ws"] }
alloy-signer-local = { workspace = true }
alloy-sol-macro = { workspace = true }
alloy-sol-types = { workspace = true }
dotenv = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true }
url = { workspace = true }

